# QtWeatherApp

./: CMakeLists.txt  README.md
qml/: SearchBar.qml  SettingsPage.qml  WeatherCard.qml  WeatherDetails.qml  WeatherPage.qml  main.qml
src/: main.cpp  weatherapi.cpp  weatherapi.h  weatherdata.cpp  weatherdata.h
